# socrates-input

./: .cruft.json  README.md  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: test.yml
socrates_input/: __init__.py  colors.py
