[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "socrates-input"
description = "A simple API to ask a user for information in a beatiful way."
version = "0.1.0"
license = "MIT"
authors = [
  "Perchun Pak <pypi.org@perchun.it>",
  "JeffyOLOLO <jeffyololo@gmail.com>",
]
readme = "README.md"
repository = "https://github.com/PerchunPak/socrates-input"


[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"


[tool.poetry.group.make.dependencies]
black = "~23"
isort = "~5.12"
pycln = "~2.1"
flake8 = "~6"
flake8-docstrings = "~1"
flake8-ensure-ascii = "~1.0"
pydocstyle = ">=4.0.0"
safety = "~2.3"
cruft = "~2.15"
lice = "~0.6"  # for generating template

pre-commit = "~3.3"


[tool.poetry.group.typing.dependencies]
mypy = "~1.3"


[tool.poetry.group.tests.dependencies]
pytest = "~7.3"
pytest-cov = "~4.0"
pytest-mock = "~3.10"
pytest-testmon = "~2.0"
pytest-randomly = "~3.12"
Faker = "~18.7"


[tool.poetry.group.github_hooks]
optional = true

[tool.poetry.group.github_hooks.dependencies]
requests = "~2.30"
GitPython = "~3.1"


[tool.black]
line-length = 120
target-version = ['py38']
